--- a/configs/config.yml
+++ b/configs/config.yml
@@ -2,10 +2,10 @@ server:
   port: "8080"
 
 mysql:
-  dsn: "root:root@tcp(localhost:3306)/clouddisk_db?charset=utf8mb4&parseTime=True&loc=Local"
+  dsn: "root:root@tcp(mysql:3306)/clouddisk_db?charset=utf8mb4&parseTime=True&loc=Local"
 
 redis:
-  addr: "localhost:6379"
+  addr: "redis:6379"
   password: ""
   db: 0
 
