--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,57 +108,57 @@ services:
       start_period: 5s
 
 
-  # # Elasticsearch 服务
-  # elasticsearch:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:9.0.3
-  #   container_name: elasticsearch
-  #   environment:
-  #     - discovery.type=single-node
-  #     - xpack.security.enabled=false # <--- 临时禁用安全，生产环境请务必启用并配置！
-  #     - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
-  #   ports:
-  #     - "9200:9200"
-  #     - "9300:9300"
-  #   volumes:
-  #     - esdata:/usr/share/elasticsearch/data # 数据持久化
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "curl -f http://localhost:9200 || exit 1"]
-  #     interval: 5s    # 每隔10秒检查一次
-  #     timeout: 10s     # 检查超时时间10秒
-  #     retries: 5       # 失败5次后标记为不健康
-  #     start_period: 60s # 在启动后的90秒内，如果健康检查失败不计入重试次数，给ES充足的启动时间
+  # Elasticsearch 服务
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.4
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false # <--- 临时禁用安全，生产环境请务必启用并配置！
+      - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data # 数据持久化
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200 || exit 1"]
+      interval: 5s    # 每隔10秒检查一次
+      timeout: 10s     # 检查超时时间10秒
+      retries: 5       # 失败5次后标记为不健康
+      start_period: 60s # 在启动后的90秒内，如果健康检查失败不计入重试次数，给ES充足的启动时间
 
-  #   # Kibana 服务
-  # kibana:
-  #   image: docker.elastic.co/kibana/kibana:9.0.3
-  #   container_name: kibana
-  #   ports:
-  #     - "5601:5601"
-  #   environment:
-  #     TZ: Asia/Shanghai
-  #     ELASTICSEARCH_HOSTS: http://elasticsearch:9200
-  #     I18N_LOCALE: "zh-CN"
-  #   depends_on:
-  #     elasticsearch:
-  #       condition: service_healthy
+    # Kibana 服务
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.18.4
+    container_name: kibana
+    ports:
+      - "5601:5601"
+    environment:
+      TZ: Asia/Shanghai
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+      I18N_LOCALE: "zh-CN"
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
 
-  # # Filebeat 服务
-  # filebeat:
-  #   image: docker.elastic.co/beats/filebeat:9.0.3
-  #   container_name: filebeat
-  #   user: root # 确保Filebeat有权限读取日志文件
-  #   volumes:
-  #     - ./deploy/filebeat/conf/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro # 挂载Filebeat配置
-  #     - ./logs:/usr/share/filebeat/logs:ro # 挂载Go应用日志目录
-  #     - /var/log:/var/log:ro # 挂载宿主机的 /var/log 目录到容器内部
-  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro 
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro 
-  #     # 如果需要持久化Filebeat内部数据（如状态文件），可以添加：
-  #     # - filebeat_data:/usr/share/filebeat/data
-  #   command: ["filebeat", "-e", "-c", "/usr/share/filebeat/filebeat.yml"]
-  #   depends_on:
-  #     - elasticsearch # 确保在Filebeat启动前Elasticsearch已启动
-  #     - app # 确保在Filebeat启动前Go应用已启动并可能开始产生日志
+  # Filebeat 服务
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:8.18.4
+    container_name: filebeat
+    user: root # 确保Filebeat有权限读取日志文件
+    volumes:
+      - ./deploy/filebeat/conf/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro # 挂载Filebeat配置
+      - ./logs:/usr/share/filebeat/logs:ro # 挂载Go应用日志目录
+      - /var/log:/var/log:ro # 挂载宿主机的 /var/log 目录到容器内部
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro 
+      - /var/run/docker.sock:/var/run/docker.sock:ro 
+      # 如果需要持久化Filebeat内部数据（如状态文件），可以添加：
+      # - filebeat_data:/usr/share/filebeat/data
+    command: ["filebeat", "-e", "-c", "/usr/share/filebeat/filebeat.yml"]
+    depends_on:
+      - elasticsearch # 确保在Filebeat启动前Elasticsearch已启动
+      #- app # 确保在Filebeat启动前Go应用已启动并可能开始产生日志
 
 
 volumes:
