--- a/configs/config.yml
+++ b/configs/config.yml
@@ -10,7 +10,7 @@ redis:
   db: 0
 
 minio:
-  endpoint: "minio:9000"
+  endpoint: "localhost:9000"
   access_key_id: "minioadmin"
   secret_access_key: "minioadmin"
   use_ssl: false
@@ -27,7 +27,7 @@ jwt:
 
 storageconfig:
   local_base_path: "./uploads/data"
-  type: "local"
+  type: "minio"
 
 log:
   output_path: "logs/app.log"
