--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   # MySQL 数据库服务
   mysql:
-    image: mysql:8.0
+    image: mysql:latest
     container_name: mysql
     command: 
       --default-authentication-plugin=mysql_native_password
