重构架构: 服务构造函数的参数变得简洁，只包含核心的业务和数据访问依赖。基础设施组件被封装和聚合，隐藏了底层的复杂性。

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -24,7 +24,7 @@ aliyun_oss:
   use_ssl: true
 
 rabbitmq:
-  url: "amqp://guest:guest@rabbitmq:5672/"
+  url: "amqp://guest:guest@localhost:5672/"
 
 jwt:
   secret_key: "MTg5ODg2OTE1MjAyNS8zLzEyIDE4OjU0OjU3"
